<resources>
    <string name="app_name">detail</string>
    <string name="title_activity_product_detail">ProductDetailActivity</string>
    <string name="event_information">행사 정보</string>
    <string name="rating_title">사람들의 평가를 확인하세요!</string>
    <string name="none_rating_title">아직 아무도 평가하지 않았어요</string>
    <string name="count">%d개</string>
    <string name="rate_count">%d명 평가</string>
    <string name="upvote_desc">또 먹을거에요</string>
    <string name="downvote_desc">또 안사먹어요</string>
    <string name="do_cancel">평가 취소</string>
    <string name="already_vote">평가했어요</string>
    <string name="review">리뷰</string>
    <string name="show_all">전체보기</string>
    <string name="none_review_title">이 상품에는 리뷰가 아직 없어요</string>
    <string name="go_to_write_review">리뷰 작성하기</string>
    <string name="write_review">리뷰 작성</string>
    <string name="badge_text_my_review">내가 쓴 리뷰</string>
    <string name="edit_review">수정하기</string>
    <string name="delete_review">삭제하기</string>
    <string name="delete_with_comment_notice">리뷰도 함께 삭제돼요</string>
    <string name="delete_with_comment_desc">평가를 취소하면 작성한\n리뷰도 함께 삭제됩니다.</string>
    <string name="confirm">확인</string>
</resources>
